--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,15 +40,7 @@ spring.security.user.password=admin
 
 ####################Themleaf Property define
 spring-boot.run.failure-allow=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/blog
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql = true
-#spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.hibernate.ddl-auto=update
-
+spring.profiles.active=dev
 debug=true
 
 
